# dev-recap

./: .gitignore  Cargo.toml  PLAN.md  README.md  flake.nix
src/: cli.rs  config.rs  error.rs  main.rs  orchestrator.rs
src/ai/: cache.rs  claude.rs  mod.rs  prompt.rs
src/git/: github.rs  mod.rs  parser.rs  scanner.rs  stats.rs
