[package]
name = "dev-recap"
version = "0.1.0"
edition = "2021"
authors = ["Ayam Dobhal <ayam@example.com>"]
description = "AI-powered git commit summarizer for Demo Day presentations"
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/dev-recap"
keywords = ["git", "cli", "tui", "ai", "summary"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI
ratatui = "0.26"
crossterm = "0.27"

# Git operations
git2 = "0.18"

# HTTP client for Claude API
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.35", features = ["full"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Caching
sled = "0.34"

# Regex for PR detection
regex = "1.10"

# Progress indicators (for non-TUI mode)
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Directory utilities
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
